[tool.poetry]
name = "salom_blue"
version = "0.1.0"
description = "Telegram bot"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.14,<3.12"
aiogram = "2.25.1"
environs = "9.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
